src/App.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

#root {
    font: 14px Helvetica Neue, Helvetica, Arial, sans-serif;
    background-color: #f5f5f5;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 20px;
    height: 100vh;
}

.container {
    width: 100%;
    max-width: 550px;
    background-color: #fff;
    border-radius: 3px;
    position: relative;
    z-index: 1;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
}

h1 {
    font-size: 5rem;
    font-weight: 700;
    color: rgba(175, 47, 47, 0.15);
    margin-bottom: 1rem;
}

.header {
    padding: 1rem 1rem 1rem 10px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-bottom: 2px solid #ddd;
    gap: 20px;
}
#doneAll {
    border: none !important;
}
#input {
    border: 1px solid #ddd;
    font-size: 1.2rem;
    width: 100%;
    border: none;
    &::placeholder {
        font-style: italic;
        color: #ddd;
        font-size: 24px;
    }
    &:focus {
        outline: none;
    }
}

ul {
    list-style: none;
    width: 100%;
}

li {
    animation: fade 400ms;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 0.5rem;
    border-bottom: 1px solid #ddd;
    width: 100%;
}

.li-left {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 20px;
    span {
        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
            Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
            sans-serif;
        font-size: 1.4rem;
        color: #444;
        font-weight: 500;
        width: 100%;
    }
}

.toggle {
    width: 2em;
    height: 2em;
    background-color: white;
    border-radius: 50%;
    vertical-align: middle;
    border: 1px solid #ddd;
    appearance: none;
    -webkit-appearance: none;
    outline: none;
    cursor: pointer;
    &:checked {
        background-color: rgb(21, 255, 0);
    }
}

.deleteBtn {
    width: 20px;
    background-color: transparent;
    border: none;
    cursor: pointer;
    margin-right: 0.5rem;
    display: none;
}
#doneAll {
    width: 2em;
    height: 2em;
    background-color: white;
    border: none;
    &:hover {
        cursor: pointer;
    }
}
.deleteSvg,
.doneAllSvg {
    width: 100%;
}

.footer {
    position: relative;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 10px 15px;
    color: #777;
}

.footer::after {
    content: "";
    position: absolute;
    width: 99%;
    height: 4px;
    left: 0.5%;
    bottom: -4px;
    border-top-left-radius: 0px !important;
    border-top-right-radius: 0px !important;
    border-radius: 3px;
    background-color: rgb(255, 255, 255);
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
}
.footer::before {
    content: "";
    position: absolute;
    width: 98%;
    height: 8px;
    left: 1%;
    bottom: -8px;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);

    border-top-left-radius: 0px !important;
    border-top-right-radius: 0px !important;
    border-radius: 3px;
    background-color: rgb(255, 255, 255);
}

.footer-center {
    min-width: 170px;
    display: flex;
    flex-direction: row;
    gap: 5px;
}

.footer button {
    border: 1px solid #f5f5f5;
    padding: 0.25rem 0.5rem;
    background-color: #f5f5f5;
    cursor: pointer;
    border-radius: 3px;
}

.clear {
    text-align: end;
}

.footer span,
.footer div {
    width: 33%;
}

footer {
    margin-top: 2rem;
    font-size: 0.5rem;
    color: #999;
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 5px;
    p:hover {
        cursor: cell;
    }
    a {
        color: #999;
        text-decoration: none;
        &:hover {
            text-decoration: underline !important;
        }
    }
}

.hide {
    display: none;
}

.show {
    display: block;
}

.checked {
    color: #999 !important;
    text-decoration: line-through;
    transition: all 1s;
}
@keyframes fade {
    from {
        transform: translateY(-100%);
    }
    to {
        transform: translateY(0%);
    }
}

@keyframes border {
    0% {
        border: 1px solid #f5f5f5;
    }
    50% {
        border: 1px solid #444;
    }
    100% {
        border: 1px solid #f5f5f5;
    }
}

button:focus {
    animation: border infinite 1s;
}

li.transition {
    animation: fade 400ms;
}

@media (max-width: 500px) {
    .footer {
        flex-wrap: wrap;
    }
    .footer span,
    .clear {
        width: 49% !important;
    }
    .footer-center {
        margin-top: 10px;
        order: 1;
        width: 100% !important;
        justify-content: center;
    }
}

